--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "jni/RTKLIB"]
-	path = jni/RTKLIB
-	url = https://github.com/eltorio/RTKLIB.git
+//[submodule "jni/RTKLIB"]
+//	path = jni/RTKLIB
+//	url = https://github.com/eltorio/RTKLIB.git
